--- a/src/main/resources/application/fxml/Login.fxml
+++ b/src/main/resources/application/fxml/Login.fxml
@@ -2,46 +2,33 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<Pane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
    <children>
-      <HBox fx:id="header" alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="600.0" styleClass="header">
+      <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" percentWidth="30"/>
+          <ColumnConstraints hgrow="SOMETIMES" percentWidth="70" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints  vgrow="SOMETIMES" />
+          <RowConstraints  vgrow="SOMETIMES" />
+          <RowConstraints  vgrow="SOMETIMES" />
+            <RowConstraints  vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label text="Find My Restaurant ">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      <HBox layoutX="548.0" layoutY="562.0" prefHeight="38.0" prefWidth="52.0">
-         <children>
-            <Button mnemonicParsing="false" text="Exit" />
-         </children>
-      </HBox>
-      <VBox alignment="TOP_CENTER" layoutX="195.0" layoutY="230.0" prefHeight="141.0" prefWidth="211.0">
-         <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="193.0">
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="ID:" />
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Name:" GridPane.rowIndex="1" />
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Password:" GridPane.rowIndex="2" />
+            <TextField fx:id="TF_id" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="id" GridPane.columnIndex="1" />
+            <TextField fx:id="TF_name" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <PasswordField fx:id="TF_password" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                <children>
-                  <Label prefHeight="17.0" prefWidth="60.0" text="ID:" />
-                  <TextField fx:id="TF_id" styleClass="id" />
+                  <Button fx:id="btn_login" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnClicked" text="Login" />
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="50.0" prefWidth="193.0">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="60.0" text="Name:" />
-                  <TextField fx:id="TF_name" styleClass="name" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="193.0">
-               <children>
-                  <Label prefWidth="60.0" text="Password:" />
-                  <PasswordField fx:id="TF_password" styleClass="password" />
-               </children>
-            </HBox>
-            <Button fx:id="btn_login" mnemonicParsing="false" onAction="#btnClicked" text="Login" />
          </children>
-      </VBox>
+      </GridPane>
    </children>
-</Pane>
+</VBox>
