--- a/src/main/resources/application/fxml/cell.fxml
+++ b/src/main/resources/application/fxml/cell.fxml
@@ -6,7 +6,7 @@
 <fx:root stylesheets="@tablesStyle.css" type="VBox" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="smoke" prefHeight="8.0" prefWidth="177.0" styleClass="smoke_zone" text="Label" />
-      <Label fx:id="seats" prefHeight="47.0" prefWidth="162.0" styleClass="chair" text="seats: &#10; 100" textAlignment="CENTER" wrapText="true" />
+      <Label fx:id="seats" alignment="CENTER" contentDisplay="CENTER" prefHeight="47.0" prefWidth="177.0" styleClass="chair" text="100" wrapText="true" />
       <Label fx:id="table" prefHeight="37.0" prefWidth="178.0" styleClass="table" text="Label" />
    </children>
 </fx:root>
