--- a/src/main/resources/application/fxml/Login.fxml
+++ b/src/main/resources/application/fxml/Login.fxml
@@ -3,32 +3,30 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
+<GridPane alignment="CENTER" hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
+  <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" />
+      <ColumnConstraints hgrow="SOMETIMES" />
+    <ColumnConstraints hgrow="SOMETIMES" />
+    <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" percentWidth="30"/>
-          <ColumnConstraints hgrow="SOMETIMES" percentWidth="70" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints  vgrow="SOMETIMES" />
-          <RowConstraints  vgrow="SOMETIMES" />
-          <RowConstraints  vgrow="SOMETIMES" />
-            <RowConstraints  vgrow="SOMETIMES" />
-        </rowConstraints>
+      <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="ID:" GridPane.columnSpan="2" />
+      <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Name:" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+      <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Password:" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <TextField fx:id="TF_id" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="id" GridPane.columnIndex="2" GridPane.columnSpan="2" />
+      <TextField fx:id="TF_name" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="name" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+      <PasswordField fx:id="TF_password" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="password" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
          <children>
-            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="ID:" />
-            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Name:" GridPane.rowIndex="1" />
-            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Password:" GridPane.rowIndex="2" />
-            <TextField fx:id="TF_id" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="id" GridPane.columnIndex="1" />
-            <TextField fx:id="TF_name" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <PasswordField fx:id="TF_password" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
-               <children>
-                  <Button fx:id="btn_login" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnClicked" text="Login" />
-               </children>
-            </HBox>
+            <Button fx:id="btn_login" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnClicked" text="Login" HBox.hgrow="SOMETIMES" />
          </children>
-      </GridPane>
+      </HBox>
    </children>
-</VBox>
+</GridPane>
