--- a/src/main/resources/application/fxml/Map.fxml
+++ b/src/main/resources/application/fxml/Map.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.embed.swing.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.embed.swing.SwingNode?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.Group?>
-<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
     <children>
 <Group autoSizeChildren="false">
-    <SwingNode layoutX="0" layoutY="0" fx:id="sn"/>
+    <SwingNode fx:id="sn" layoutX="0" layoutY="0" />
 </Group>
-
+      <HBox>
+         <children>
+            <Button fx:id="btn_save" mnemonicParsing="false" onAction="#btn_clicked" text="save" />
+            <Button mnemonicParsing="false" text="Button" />
+         </children>
+      </HBox>
     </children>
 
 </fx:root>
