--- a/src/main/resources/application/fxml/baseFrame.fxml
+++ b/src/main/resources/application/fxml/baseFrame.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<fx:root alignment="CENTER" gridLinesVisible="true" hgap="1.0" stylesheets="@style.css" type="GridPane" vgap="1.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER" hgap="1.0" stylesheets="@style.css" type="GridPane" vgap="1.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
         <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
